# real_time_seg

./: .gitignore  CMakeLists.txt  README.md  optical_flow.py  requirements.txt  run_timing_scripts.sh  video_seg.py
cplusplus/: CMakeLists.txt  utils.cpp  utils.h  video_seg.cpp
cplusplus/source/: CMakeLists.txt  video_seg.cpp
cpp/: CMakeLists.txt  utils.cpp  utils.h  video_seg.cpp
example_data/CholecSeg8k/: training.ipynb
example_data/Ultrasound/: Q000_04_tu_segmented_segmentation_256.avi  best_model_ultrasound_ce.pth  best_model_ultrasound_dicece.pth  best_model_ultrasound_dicece_jit.pt  training.ipynb
python/: CMakeLists.txt  video_seg.py
